initial html in header

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,22 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
 
-.text-white {
-	color: white;
-}
-
-.centered-flex-1item {
+.flex-center {
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-.space-btw-flex-hor {
+.flex-spacebtw-hor {
 	display: flex;
 	justify-content: space-between;
-	align-items: start;
-}
-
-.height-50 {
-	height: 50px;
+	align-items: center;
 }
